# django-react-flow

./: pyproject.toml
django_react_flow/: settings.py  urls.py
django_react_flow/parsers/: base.py  yaml.py
django_react_flow/templates/: react_flow.html
django_react_flow/views/: react_flow.py
