[tool.poetry]
name = "django-react-flow"
version = "0.1.0"
description = "Building react-flow graph via django using yaml"
authors = ["Sergei Konik <s.konik.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "django_react_flow"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
pyyaml = "^6.0.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
